kubernetes/apps/network/envoy-gateway/app/envoy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: external.${SECRET_DOMAIN}
      lbipam.cilium.io/ips: "192.168.178.203"
      gatus.home-operations.com/endpoint: |-
        client:
          dns-resolver: tcp://1.1.1.1:53
        group: external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: internal.${SECRET_DOMAIN}
    gatus.home-operations.com/endpoint: |-
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
      alerts:
        - type: discord
          description: health-check failed
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: internal.${SECRET_DOMAIN}
      lbipam.cilium.io/ips: "192.168.178.250"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
    - name: git-ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
  namespace: network
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
  responseOverride:
    - match:
        statusCodes:
          - type: Value
            value: 403
      redirect:
        scheme: https
        hostname: error.${SECRET_DOMAIN}
        path:
          type: ReplaceFullPath
          replaceFullPath: /403.html
        statusCode: 403
    - match:
        statusCodes:
          - type: Value
            value: 404
      redirect:
        scheme: https
        hostname: error.${SECRET_DOMAIN}
        path:
          type: ReplaceFullPath
          replaceFullPath: /404.html
        statusCode: 404
    - match:
        statusCodes:
          - type: Value
            value: 500
      redirect:
        scheme: https
        hostname: error.${SECRET_DOMAIN}
        path:
          type: ReplaceFullPath
          replaceFullPath: /500.html
        statusCode: 500
    - match:
        statusCodes:
          - type: Value
            value: 502
      redirect:
        scheme: https
        hostname: error.${SECRET_DOMAIN}
        path:
          type: ReplaceFullPath
          replaceFullPath: /502.html
        statusCode: 502
    - match:
        statusCodes:
          - type: Value
            value: 503
      redirect:
        scheme: https
        hostname: error.${SECRET_DOMAIN}
        path:
          type: ReplaceFullPath
          replaceFullPath: /503.html
        statusCode: 503
    - match:
        statusCodes:
          - type: Value
            value: 504
      redirect:
        scheme: https
        hostname: error.${SECRET_DOMAIN}
        path:
          type: ReplaceFullPath
          replaceFullPath: /504.html
        statusCode: 504

---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.kubernetes.io/controller: none
  name: https-redirect
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
